# 3sxtra

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODE_HEALTH_CANDIDATES.md  CPS3 FBNeo SF3 Lua Script.md  NETPLAY.md  NETPLAY_ROADMAP.md  PRD.md  README.md  RENDERER_BENCHMARKS.md  RENDERING_OPTIMIZATION_ANALYSIS.md  RMLUI_GAP_ANALYSIS.md  RMLUI_INTEGRATION_PLAN.md  SDL3_NET_MIGRATION.md  TEXT_RENDERING_SYSTEMS.md  THIRD_PARTY_NOTICES.txt  TRAINING.md  build-deps.sh  build_log.txt  build_log2.txt  build_log3.txt  build_log4.txt  build_out.txt  build_task4.txt  build_task4_clean.txt  build_task5.txt  build_task5b.txt  build_verify.txt  ctest_task4.txt  extract_lz77.py  extract_sw.py  fix_sw.py  lint_report.txt  lint_task4.txt  move_gd3rd.py  move_state.py  old_char_select.cpp  parity_replay_sync.md  (+11 more)
.agents/skills/architecture-decision-records/: SKILL.md
.agents/skills/c-cpp-pro/: SKILL.md
.agents/skills/code-review-checklist/: SKILL.md
.agents/skills/concise-planning/: SKILL.md
.agents/skills/kaizen/: SKILL.md
.agents/skills/test-fixing/: SKILL.md
.agents/workflows/: bolt.md  judge.md  medic.md  palette.md  rmlui.md
.github/workflows/: build_flatpak.yml  build_linux.yml  build_linux_arm64.yml  build_linux_arm64.yml.disabled  build_macos.yml  build_macos.yml.disabled  build_rpi4.yml  build_rpi4.yml.disabled  build_windows.yml  build_windows.yml.disabled  release.yml  release.yml.disabled
.jules/: bolt.md
assets/ui/: attract_overlay.rcss  attract_overlay.rml  base.rcss  blocking_training.rml  button_config.rcss  button_config.rml  casual_lobby.rcss  casual_lobby.rml  casual_lobby_chat.rml  char_select.rcss  char_select.rml  continue.rcss  continue.rml  control_mapping.rcss  control_mapping.rml  copyright.rcss  copyright.rml  dev_overlay.rcss  dev_overlay.rml  effie_hud.rcss  effie_hud.rml  exit_confirm.rcss  exit_confirm.rml  extra_option.rcss  extra_option.rml  frame_display.rcss  frame_display.rml  game_hud.rcss  game_hud.rml  game_option.rcss  game_option.rml  gameover.rcss  gameover.rml  input_display.rcss  input_display.rml  leaderboard.rcss  leaderboard.rml  match_accept.rcss  match_accept.rml  memory_card.rcss  (+44 more)
assets/voice_mod/: readme.txt
cmake/: aarch64-linux-gnu.cmake
docs/: building.md
flatpak/: io.github.threestylextra.app.desktop  io.github.threestylextra.app.metainfo.xml  io.github.threestylextra.app.yml
shaders/custom/: chain1-scalefx-jinc2.slangp  chain2-nnedi3-sabr.slangp  chain3-nnedi3-jinc2.slangp  chain4-nnedi3-omni.slangp  chain5-infinity.slangp  edge-smooth.slang  ink-cel.slang  ink-fighter-nnedi3.slangp  ink-fighter.slangp  stock.slang  stock.slangp
src/: main.c  main.h
src/include/: common.h  configuration.h  game_state.h  menu_bridge.h  structs.h  types.h
src/lua/: smart_dummy.lua  training_main.lua
src/netplay/: discovery.c  discovery.h  game_state.c  game_state.h  identity.c  identity.h  lobby_server.c  lobby_server.h  net_detect.c  net_detect.h  net_tuning.h  netplay.c  netplay.h  ping_probe.c  ping_probe.h  sdl_net_adapter.c  sdl_net_adapter.h  sha256.c  sha256.h  stun.c  stun.h  upnp.c  upnp.h
src/port/: broadcast.c  char_data.c  char_data.h  cli_parser.c  config.c  config.h  imgui_font.cpp  imgui_font_8x8.h  input_definition.cpp  legacy_matrix.c  menu_bridge.c  modded_stage.c  modded_stage.h  native_save.c  paths.c  paths.h  resources.c  sdl_bezel.c  stage_config.c  stage_config.h  tracy_gpu.cpp  tracy_gpu.h  tracy_zones.h  utils.c
src/shaders/: blit.frag.spv  blit.gpu.frag  blit.gpu.vert  blit.vert.spv  glslp_parser.c  glslp_parser.h  librashader_manager.c  librashader_manager.h  librashader_manager_gl.c  librashader_manager_gpu.c  lz77_decode.comp.spv  lz77_decode.gpu.comp  palette_convert.comp.spv  palette_convert.gpu.comp  passthru.frag  rect.frag  rect.gpu.frag  rect.gpu.vert  rect.vert  rect.vert.spv  scene.frag  scene.gpu.vert  scene.spv  scene.vert  scene_array.frag  scene_array.gpu.frag  shader_manager.c  shader_manager.h  text.frag.spv  text.gpu.frag  text.gpu.vert  text.vert  text.vert.spv  vert.spv
src/test/: test_runner.c  test_runner.h
src/zlib/: infblock.c
tests/: CMakeLists.txt  README.md  test_adx_decoder.c  test_sound_lookup.c
tests/unit/: CMakeLists.txt  mocks_globals.c  mocks_imgui_wrapper.c  mocks_netplay.c  mocks_netplay_ui_deps.c  mocks_paths.c  mocks_stage_config.c  test_adx_decoder.c  test_afs_validation.c  test_bezel_assets.c  test_bezel_layout.c  test_broadcast_config.c  test_broadcast_win32.cpp  test_char_data.c  test_charset_poc.c  test_cli.c  test_config.c  test_effect_state_persistence.c  test_font_rendering.c  test_game_state.c  test_game_state_roundtrip.c  test_globals_access.c  test_glslp_parser.c  test_identity.c  test_imgui_font.cpp  test_legacy_matrix.c  test_lobby_server.c  test_memman.c  test_menu_bridge.c  test_native_save.c  test_netplay_catchup.c  test_netplay_events.c  test_netplay_init.c  test_netplay_metrics.c  test_netplay_oob.c  test_netplay_refactor.c  test_netplay_run.c  test_netplay_ui.c  test_netplay_ui_helper.cpp  test_paths.c  (+7 more)
tests/util/: font_dump_test.c  font_extractor.c  font_header.c  test_bridge_access.py  test_navigator_logic.py  test_rcss_overflow.py
tools/: __init__.py  analyze_desync.py  build-linux-debug.sh  clang_lint.sh  compare_char_data.py  compare_states.py  compile_shaders.py  generate_from_palmod.py  input_mirror.ahk  lua_trial_parser.py  requirements-ubuntu-sdl3.txt  requirements-ubuntu.txt  requirements-windows.txt  run_all_tests.sh
tools/fightcade_replays/: ChunLi_vs_Ken_001_status.txt  Yun_vs_Yang_001_status.txt  automated_sync_test.py  compare_frames.py  fcade_replay_tool.py  ggpo_to_csv.py  parity_replay.py  replay_input_dumper_v3.lua  replay_inputs.py  rng_scanner.lua
tools/lobby-server/: .gitignore  __test_match_accept.js  __test_match_rotation.js  __test_room.js  __test_sse.js  deploy.sh  lobby-server.js  lobby-server.service  lobby.db  lobby.db-shm  lobby.db-wal  package-lock.json  package.json  test-server.sh
tools/ui_designer/: index.html
tools/util/: __init__.py  bridge_state.py  navigator.py
(+1344 files in other folders)
